--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.0.0",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
