--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^4.3.8",
     "lint-staged": "^11.0.0",
+    "mini-css-extract-plugin": "^2.0.0",
     "prettier": "^2.3.2",
     "react-refresh": "^0.9.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
